css/style.css
* {
    box-sizing: border-box;
}

body {
    position: relative;
    font-family: sans-serif;
}
.container {
    min-width: 345px;
}
.top1 {
    height: 100px;
}
h1{
    margin-top: 62px;
}
h1 > small{
    display: block;
}
#social_media {
    width: 40px;
    background: transparent;
    position: fixed;
    top: 200px;
    z-index: 7000;
}
#social_media a{
    text-decoration: none;
}

#copywright {
    height: 2rem;
}
@media screen and (max-width: 800px) {
    #social_media {
        width: auto;
        position: absolute;
        bottom: 0;
        top: auto;
        left: 50%;
        transform: translateX(-50%);
    }
    #copywright {
        height: 5rem;
    }
}
@media screen and (min-width: 992px) and (max-width:1030px) {
    #social_media {
        width: auto;
        position: absolute;
        bottom: 0;
        top: auto;
        left: 50%;
        transform: translateX(-50%);
    }
    #copywright {
        height: 5rem;
    }
}
#tekst {
    width: 100%;
    height: 100%;
}
.contact_form {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.contact_form_list:first-child {
    padding-right: 8px;
}
.contact_form_list {
    padding: 8px 0;
}
.img-logo {
    width: 200px;
    height: 50px;
}

.navbar-default
{
    background: #f0f0f0;
    font-size: 20px;
}
.navbar-fixed-top {
    top: 0;
    border-width: 0 0 0 0;
}
.navbar-default .navbar-nav>li>a
{
    color: #000a91;
}
.navbar-default .navbar-nav>li>a:hover
{
    color: #000a91;
    background-color: #fff;

}
.navbar-default .navbar-nav>li>a:active
{
    color: #af000a;
    background-color: #fff;
}
#hero {
    position: relative;
    overflow: hidden;
    background-image: url("https://descubriendotalento.files.wordpress.com/2017/06/2797.jpg");
    background-size: cover;
    background-position: center;
    height: 100vh;
    background-repeat: no-repeat;
    background-attachment: fixed;

}
.hero-content {
    height:  100%;
    position: relative;
    text-align: center;
    color: white;
}
.hero-text, .hero-content > a {
    transform: translate(0px,45vh)
}

#features > .col-lg-12 .top1 > .col-lg-6 .col-md-6 .col-sm-6 .col-xs-12 {
    position: relative;
}
#features i.fa {
    position: absolute;
    top: 15px;
    right: 15px;
}
@media(max-width:768px) {
    .navbar-default {
        background: #f0f0f0;
        font-size: 14px;
    }

    footer {
        text-align: center;
    }
}
#cookieInfo{
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background: #f0f0f0;
    color: black;
    z-index: 1000;
    opacity: 0.9;
}
#cookieInfo p{
    padding: 10px 30px;
}
#cookieInfo span{
    position: absolute;
    font-size: 22px;
    color: black;
    cursor: pointer;
    display: block;
    right: 10px;
    top: 10px;
    width: 22px;
    height: 22px;
    border-radius: 11px;
    line-height: 22px;
    text-align: center;
    text-decoration: none;
    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 1);
}

.map {
    max-width: 100%;
    max-height: 300px;
}
.thumbnail img {
    width: 252.500px;
    height: 167.688px;
}
#contact .btn {
padding: 8px 30px;
margin: 5px;
}

footer {
    background-color: #e7e7e7;
    font-family: sans-serif;
    font-size: smaller;
    margin-top: 25px;
    padding-bottom: 20px;
}

@media only screen and (max-width: 1024px) {

    .hero-text, .hero-content > a {
        transform: translate(0px, 40vh)
    }}
#contact_info {
    background-color: rgba(240, 240, 240, 0.5);
    position: absolute;
    left: 10.6%;
    top: 0;
    right: 10.5%;
    text-align: left;
    transition: background-color .5s ease-in-out;
}
#contact_info:hover {
    background-color: rgba(240, 240, 240, 1);
}
img.map {
    position: relative;
}
hr.separator {
    margin-bottom: 0;
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}
.thumbnail {
    height: 51rem;
}
#authors .thumbnail .btn {
    position: absolute;
    bottom: 8%;
    left: 50%;
    transform: translateX(-50%);
}
#home_button {
    bottom: 5%;
    left: 10%;
    border: solid;
    outline: none;
    background-color: blue;
    color: white;
    cursor: pointer;
    padding: 15px;
    border-radius: 50px;
    font-weight: bold;
    display: inline-block;
}
footer p {
    text-align: center;
}
#footer_menu a {
    display: block;
    float: left;
    width: 25%;
    text-align: center;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px transparent;
    position: relative;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: .3s;
    transition-duration: .3s
}
#footer_menu a:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: #337ab7;
    -webkit-transform: scaleY(0);
    transform: scaleY(0);
    -webkit-transform-origin: 50% 0;
    transform-origin: 50% 0;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: .3s;
    transition-duration: .3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out
}
#footer_menu a:active, #footer_menu a:focus, #footer_menu a:hover {
    color: #fff;
}
#footer_menu a:active:before, #footer_menu a:focus:before, #footer_menu a:hover:before {
    -webkit-transform: scaleY(1);
    transform: scaleY(1);
}
@media screen and (min-width:615px) and (max-width:991px) {
    #contact_info {
        left: 50%;
        transform: translateX(-50%);
    }
}
@media screen and (min-width: 992px) and (max-width: 1199px) {
    .thumbnail {
        height: 59rem;
    }
}

